# retinomap

./: .envrc  .gitignore  README.md  pyproject.toml
src/retinomap/: config.py  factory.py  gui.py  logger.py  player.py  preset.py  stimuli.py  warp.py
src/retinomap/analysis/: sanity_check.py
