[project]
name = "retinomap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "pygame>=2.6.1",
    "pyside6>=6.11.0",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "isort>=8.0.1",
    "python-language-server[all]>=0.36.2",
    "yapf>=0.43.0",
]

[project.scripts]
retinomap = "retinomap.gui:main"
sanity-check = "retinomap.analysis.sanity_check:main"
